# aws-expert

./: Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
src/crew/: awscrew.py  main.py  ui.py
src/crew/config/: agents.yaml  tasks.yaml
src/crew/tools/: aws.py  serper.py
