[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "crewai>=0.148.0",
    "crewai-tools>=0.55.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
    "pysqlite3-binary == 0.5.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0"
]
